apps/base/media/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  selector:
    app: deluge
  ports:
    - name: http
      port: 8112
      protocol: TCP
      targetPort: port-8112
